--- a/homepage/projecten.html
+++ b/homepage/projecten.html
@@ -4,19 +4,18 @@
     <meta charset="UTF-8">
     <title>Title</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-    <link rel="stylesheet" href="portfolio_Jesse.Bergmans.css">
-    <script src="portfolio_Jesse.Bergmans.js" defer></script>
+    <link rel="stylesheet" href="projecten.css">
+    <script src="projecten.js" defer></script>
 </head>
 <body>
-
 <header class="navigatiebalk">
 
     <h1 class="portfolio">Portfolio</h1>
     <nav>
         <ul class="nav-lijst">
-            <li class="nav-item"><a href="Home" class="nav-link">Home</a></li>
+            <li class="nav-item"><a href="home.html" class="nav-link">Home</a></li>
             <li class="nav-item"><a href="Over mij" class="nav-link">Over mij</a></li>
-            <li class="nav-item"><a href="Projecten" class="nav-link">Projecten</a></li>
+            <li class="nav-item"><a href="projecten/projecten.html" class="nav-link">Projecten</a></li>
             <li class="nav-item"><a href="contact" class="nav-link">Contact</a></li>
         </ul>
     </nav>
@@ -25,15 +24,5 @@
 </header>
 
 <div class="onderscheidingsbalk"></div>
-
-<section class="introductie">
-    <img src="assets/Tekengebied 1.png" class="foto"/>
-
-    <div class="introductietext">
-        <h1>Portfolio</h1>
-        <h2>Jesse Bergmans</h2>
-    </div>
-</section>
-
 </body>
 </html>
