--- a/homepage/projecten.html
+++ b/homepage/projecten.html
@@ -13,7 +13,7 @@
     <h1 class="portfolio">Portfolio</h1>
     <nav>
         <ul class="nav-lijst">
-            <li class="nav-item"><a href="home.html" class="nav-link">Home</a></li>
+            <li class="nav-item"><a href="index.html" class="nav-link">Home</a></li>
             <li class="nav-item"><a href="Over mij" class="nav-link">Over mij</a></li>
             <li class="nav-item"><a href="projecten/projecten.html" class="nav-link">Projecten</a></li>
             <li class="nav-item"><a href="contact" class="nav-link">Contact</a></li>
