--- a/homepage/index.html
+++ b/homepage/index.html
@@ -24,13 +24,13 @@
         </ul>
     </nav>
 
-    <button class="contact-button">contacteer mij</button>
+    <a href="contact.html" class="contact-button">contacteer mij</a>
 </header>
 
 <div class="onderscheidingsbalk"></div>
 
 <section class="introductie">
-    <img src="../assets/Tekengebied%201.png" class="foto"/>
+    <img src="assets/Tekengebied%201.png" class="foto"/>
 
     <div class="introductietext">
         <h1>Portfolio</h1>
@@ -60,12 +60,12 @@
         <h1>Software basiskennis</h1>
 
     <div class="software-grid">
-        <img src="../assets/canva.png" alt="">
-        <img src="../assets/powerpoint.png" alt="">
-        <img src="../assets/photoshop.png" alt="">
-        <img src="../assets/illustrator.png" alt="">
-        <img src="../assets/excel.png" alt="">
-        <img src="../assets/webstorm.png" alt="">
+        <img src="assets/canva.png" alt="">
+        <img src="assets/powerpoint.png" alt="">
+        <img src="assets/photoshop.png" alt="">
+        <img src="assets/illustrator.png" alt="">
+        <img src="assets/excel.png" alt="">
+        <img src="assets/webstorm.png" alt="">
     </div>
     </div>
 </section>
@@ -76,6 +76,21 @@
         <h2>contact</h2>
         <h1>gegevens</h1>
     </div>
+
+    <div class="media-grid">
+        <img src="assets/tel.png" alt=""/>
+        <img src="assets/insta.png" alt=""/>
+        <img src="assets/discord.png" alt=""/>
+        <img src="assets/mail.png" alt=""/>
+    </div>
+
+    <div class="contact-info">
+        <p>Tel: +32 0468 18 99 75</p>
+        <p>Instagram: jessebergmans</p>
+        <p>Discord: jesseb125</p>
+        <p>Mail: Jessebergmans123@gmail.com</p>
+    </div>
+
 </section>
 </div>
 </body>
