--- a/homepage/contact.html
+++ b/homepage/contact.html
@@ -4,8 +4,46 @@
     <meta charset="UTF-8">
     <title>Title</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+    <link rel="stylesheet" href="contact.css">
+    <script src="contact.js" defer></script>
 </head>
 <body>
+<header class="navigatiebalk">
 
+    <h1 class="portfolio">Portfolio</h1>
+    <nav>
+        <ul class="nav-lijst">
+            <li class="nav-item"><a href="index.html" class="nav-link">Home</a></li>
+            <li class="nav-item"><a href="over-mij.html" class="nav-link">Over mij</a></li>
+            <li class="nav-item"><a href="projecten.html" class="nav-link">Projecten</a></li>
+            <li class="nav-item"><a href="contact.html" class="nav-link">Contact</a></li>
+        </ul>
+    </nav>
+
+    <a href="contact.html" class="contact-button">contacteer mij</a>
+</header>
+
+<div class="onderscheidingsbalk"></div>
+
+<section class="contact-sectie">
+    <div class="contact-gegevens">
+        <h1>Contact gegevens</h1>
+    </div>
+
+    <div class="media-grid">
+        <img src="assets/tel.png" alt=""/>
+        <img src="assets/insta.png" alt=""/>
+        <img src="assets/discord.png" alt=""/>
+        <img src="assets/mail.png" alt=""/>
+    </div>
+
+    <div class="contact-info">
+        <p>Tel: +32 0468 18 99 75</p>
+        <p>Instagram: jessebergmans</p>
+        <p>Discord: jesseb125</p>
+        <p>Mail: Jessebergmans123@gmail.com</p>
+    </div>
+
+</section>
 </body>
 </html>
