--- a/homepage/over-mij.html
+++ b/homepage/over-mij.html
@@ -4,8 +4,50 @@
     <meta charset="UTF-8">
     <title>Title</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+    <link rel="stylesheet" href="over-mij.css">
+    <script src="over-mij.js" defer></script>
 </head>
 <body>
+<header class="navigatiebalk">
 
+    <h1 class="portfolio">Portfolio</h1>
+    <nav>
+        <ul class="nav-lijst">
+            <li class="nav-item"><a href="index.html" class="nav-link">Home</a></li>
+            <li class="nav-item"><a href="over-mij.html" class="nav-link">Over mij</a></li>
+            <li class="nav-item"><a href="projecten.html" class="nav-link">Projecten</a></li>
+            <li class="nav-item"><a href="contact.html" class="nav-link">Contact</a></li>
+        </ul>
+    </nav>
+
+    <a href="contact.html" class="contact-button">contacteer mij</a>
+</header>
+
+<div class="onderscheidingsbalk"></div>
+
+<section class="persoonlijk">
+    <div class="teksteninfo">
+        <h1>'Hallo'!</h1>
+        <h2>Ik ben Jesse Bergmans</h2>
+        <p>Ik studeer digitale vormgeving aan de PXL in Hasselt, maar waar hou ik mij nu mee bezig buiten mijn studie ?
+            Ik hou mij buiten mijn studieuren voornamelijk bezig bij mijn vriendengroep of bij mijn sportclub. Alle tijd die
+            ik over heb gebruik ik als ontspanning bv: gamen of tekenen. Ik ben ook een gedreven verzamelaar van allerlei verschillende
+            verzamelobjecten, dit varieert van funko figuren naar actie figuren en verzamelkaarten. Ik ben ook een grote film/serie fanatic.
+            Ik twijfel nog of ik na mijn studie als designer de richting televisie en film ga volgen op de C-mine Genk of dat ik verder ga als
+            designer.
+        </p>
+    </div>
+    <img src="assets/profielfoto-overmij.png" alt=""/>
+</section>
+
+<section class="gallery-grid">
+    <div class="fotos">
+        <img src="assets/foto-1.png" class="img1" alt=""/>
+        <img src="assets/foto 5.png" class="img2" alt=""/>
+        <img src="assets/foto-4.png" class="img3" alt=""/>
+        <img src="assets/foto-3.png"  class="img4" alt=""/>
+        <img src="assets/foto 2.png"  class="img5" alt=""/>
+    </div>
+</section>
 </body>
 </html>
