--- a/homepage/project-melchior.html
+++ b/homepage/project-melchior.html
@@ -4,8 +4,7 @@
     <meta charset="UTF-8">
     <title>Title</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-    <link rel="stylesheet" href="projecten.css">
-    <script src="projecten.js" defer></script>
+    <link rel="stylesheet" href="project-melchior.css">
 </head>
 <body>
 <header class="navigatiebalk">
@@ -22,31 +21,6 @@
 
     <a href="contact.html" class="contact-button">contacteer mij</a>
 </header>
-
 <div class="onderscheidingsbalk"></div>
-
-<section class="projecten-grid">
-    <a href="project-wico.html">
-    <div class="project-kaart">
-        <h2>Project: Buitenlandse stage WICO</h2>
-        <img src="assets/foto 8.png" alt=""/>
-    </div>
-    </a>
-
-    <a href="project-scripting.html">
-    <div class="project-kaart">
-        <h2>Project: Scripting takeaway site</h2>
-        <img src="assets/tratora.png" alt=""/>
-    </div>
-    </a>
-
-    <a href="project-melchior.html">
-    <div class="project-kaart">
-        <h2>Toekomstig prject: mascotte Melchior</h2>
-        <img src="assets/foto 9.png" alt=""/>
-    </div>
-    </a>
-
-</section>
 </body>
 </html>
