commit: projecten + extra info

--- a/homepage/project-melchior.html
+++ b/homepage/project-melchior.html
@@ -7,6 +7,10 @@
     <link rel="stylesheet" href="project-melchior.css">
 </head>
 <body>
+<div class="pagina">
+
+    <div class="decor"></div>
+
 <header class="navigatiebalk">
 
     <h1 class="portfolio">Portfolio</h1>
@@ -22,5 +26,26 @@
     <a href="contact.html" class="contact-button">contacteer mij</a>
 </header>
 <div class="onderscheidingsbalk"></div>
+
+<section class="project">
+    <img src="assets/foto 9.png" alt=""/>
+
+    <div class="teksteninfo">
+        <h1>Toekomstig project: Melchior mascotte</h1>
+        <p>Dit project is een volledig persoonlijk en zelfstandig project om mijn skills te zetten met het programma illustrator.
+            In dit project hoop ik een originele mascotte te ontwerpen. De mascotte zal gebaseerd worden op een dier, in dit geval
+            is het een vos omdat ik dit meer vind passen met het bedrijf. Deze mascotte zal in een recht staande positie staan, hij zal
+            een drankje vast hebben en een shirtje dragen van het bedrijf. Ik hoop na mijn examens met dit project verder te gaan. En deze
+            achteraf toe te voegen aan mijn portfolio. Ik ben gestart met dit project om mij zelf te testen op het gebruik van de pen tool,
+            het gebruik maken van kleuren, patronen maken en schaduw effecten toevoegen. Het is een creatief project gebaseerd op design.
+        </p>
+    </div>
+</section>
+
+<div class="horizontale-balk-2"></div>
+
+<h1 class="nttv">Nog toe te voegen</h1>
+
+</div>
 </body>
 </html>
