--- a/homepage/project-scripting.html
+++ b/homepage/project-scripting.html
@@ -5,6 +5,7 @@
     <title>Title</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <link rel="stylesheet" href="project-scripting.css">
+    <script src="project-scripting.js" defer></script>
 </head>
 <body>
 <header class="navigatiebalk">
@@ -22,5 +23,44 @@
     <a href="contact.html" class="contact-button">contacteer mij</a>
 </header>
 <div class="onderscheidingsbalk"></div>
+
+<section class="gallery-grid">
+    <div class="fotos">
+        <img src="assets/Foto 11.png" alt=""/>
+        <img src="assets/foto 12.png" alt=""/>
+        <img src="assets/foto 13.png" alt=""/>
+        <img src="assets/foto 14.png" alt=""/>
+    </div>
+
+</section>
+
+<div class="horizontale-balk-2"></div>
+
+<div id="lightbox">
+    <span id="lightbox-close">&times;</span>
+    <img id="lightbox-img" src="" alt="">
+</div>
+
+<section class="persoonlijk">
+    <div class="teksteninfo">
+        <h1>Project: scripting</h1>
+        <p>Je kan op de afbeeldingen klikken om deze te vergroten. Dit project is mijn eerste grote project dat ik heb gemaakt
+            voor mijn studie. In dit project is het de bedoeling om een website op te bouwen voor een fictie bedrijf. Op deze
+            site moet er een homepage voorzien zijn met een gerecht van de dag aangetoond aan het begin van de pagina.
+            Hiernaast moesten we ook een pagina hebben met de volledige menu van mijn bedrijf, je moet in dit menu de optie
+            hebben om jou producten te verschuiven volgens prijs en je moet voorzien dat je producten kan toevoegen aan je
+            winkelmand. Hier staat ook een maximum op per product. De website werd opgebouwd met gebruik van HTML, CSS en javascript.
+        </p>
+    </div>
+</section>
+
+<div class="horizontale-balk-2"></div>
+
+
+<video controls>
+    <source src="assets/2026-01-15 00-11-41.mp4" type="video/mp4">
+    Je browser ondersteunt geen video.
+</video>
+
 </body>
 </html>
