--- a/homepage/project-wico.html
+++ b/homepage/project-wico.html
@@ -41,6 +41,10 @@
     </div>
 </section>
 
+<div class="foto-bedrijf">
+    <img src="assets/foto-bedrijf.png" alt=""/>
+</div>
+
 
 </body>
 </html>
