--- a/homepage/projecten.html
+++ b/homepage/projecten.html
@@ -40,9 +40,11 @@
     </div>
     </a>
 
+    <div class="scheidingslijn"></div>
+
     <a href="project-melchior.html">
     <div class="project-kaart">
-        <h2>Toekomstig prject: mascotte Melchior</h2>
+        <h2>Toekomstig project: mascotte Melchior</h2>
         <img src="assets/foto 9.png" alt=""/>
     </div>
     </a>
