Simpele privacy richtlijnen

--- a/homepage/contact.html
+++ b/homepage/contact.html
@@ -45,5 +45,10 @@
     </div>
 
 </section>
+
+<footer class="footer">
+    <a href="privacy.txt">Privacy-richtlijnen</a>
+</footer>
+
 </body>
 </html>
