--- a/homepage/index.html
+++ b/homepage/index.html
@@ -93,5 +93,10 @@
 
 </section>
 </div>
+
+<footer class="footer">
+    <a href="privacy.txt">Privacy-richtlijnen</a>
+</footer>
+
 </body>
 </html>
