--- a/homepage/over-mij.html
+++ b/homepage/over-mij.html
@@ -49,5 +49,10 @@
         <img src="assets/foto 2.png"  class="img5" alt=""/>
     </div>
 </section>
+
+<footer class="footer">
+    <a href="privacy.txt">Privacy-richtlijnen</a>
+</footer>
+
 </body>
 </html>
