--- a/homepage/project-melchior.html
+++ b/homepage/project-melchior.html
@@ -47,5 +47,10 @@
 <h1 class="nttv">Nog toe te voegen</h1>
 
 </div>
+
+<footer class="footer">
+    <a href="privacy.txt">Privacy-richtlijnen</a>
+</footer>
+
 </body>
 </html>
