--- a/homepage/project-scripting.html
+++ b/homepage/project-scripting.html
@@ -62,5 +62,9 @@
     Je browser ondersteunt geen video.
 </video>
 
+<footer class="footer">
+    <a href="privacy.txt">Privacy-richtlijnen</a>
+</footer>
+
 </body>
 </html>
