--- a/homepage/project-wico.html
+++ b/homepage/project-wico.html
@@ -45,6 +45,9 @@
     <img src="assets/foto-bedrijf.png" alt=""/>
 </div>
 
+<footer class="footer">
+    <a href="privacy.txt">Privacy-richtlijnen</a>
+</footer>
 
 </body>
 </html>
