--- a/homepage/projecten.html
+++ b/homepage/projecten.html
@@ -50,5 +50,10 @@
     </a>
 
 </section>
+
+<footer class="footer">
+    <a href="privacy.txt">Privacy-richtlijnen</a>
+</footer>
+
 </body>
 </html>
