Simpele privacy richtlijnen

--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -7,67 +7,11 @@
     <link rel="stylesheet" href="portfolio.css">
 </head>
 <body>
+<p class="tekst">Reflectie vragen + leerdoelen en X factor</p>
 
-<main class="container">
-    <header>
-        <h1>OLR Digitale Vormgeving</h1>
-        <p class="student">Jesse Bergmans – 1DVOb</p>
-    </header>
-
-    <section class="orl">
-        <h2>ORL 2</h2>
-        <p class="omschrijving">
-            De gegradueerde realiseert binnen het eigen aandeel van de opdracht creatieve
-            en visueel aantrekkelijke ontwerpen voor assets en gebruiksvriendelijke
-            interfaces gericht op een aangename gebruikerservaring.
-        </p>
-
-        <div class="antwoord">
-            <p><strong>Mijn antwoord:</strong></p>
-            <p class="placeholder">Schrijf hier je antwoord voor ORL 2…</p>
-        </div>
-    </section>
-
-    <section class="orl">
-        <h2>ORL 7</h2>
-        <p class="omschrijving">
-            De gegradueerde werkt projectmatig en houdt zich aan de vooropgestelde
-            planning en methodiek. De gegradueerde zoekt mee naar oplossingen en
-            onderbouwt deze.
-        </p>
-
-        <div class="antwoord">
-            <p><strong>Mijn antwoord:</strong></p>
-            <p class="placeholder">Schrijf hier je antwoord voor ORL 7…</p>
-        </div>
-    </section>
-
-    <section class="orl">
-        <h2>ORL 8</h2>
-        <p class="omschrijving">
-            De gegradueerde communiceert en rapporteert op een correcte wijze,
-            afgestemd op het doelpubliek en hanteert het gepaste vakjargon.
-        </p>
-
-        <div class="antwoord">
-            <p><strong>Mijn antwoord:</strong></p>
-            <p class="placeholder">Schrijf hier je antwoord voor ORL 8…</p>
-        </div>
-    </section>
-
-    <section class="orl">
-        <h2>ORL 11</h2>
-        <p class="omschrijving">
-            De gegradueerde werkt technologisch en duurzaam, handelt conform de
-            wetgeving en houdt rekening met veiligheids- en privacyrichtlijnen.
-        </p>
-
-        <div class="antwoord">
-            <p><strong>Mijn antwoord:</strong></p>
-            <p class="placeholder">Schrijf hier je antwoord voor ORL 11…</p>
-        </div>
-    </section>
-</main>
+<a class="link" href="assets/eindreflectie-wpl1-dvo.pdf" target="_blank">
+    Eindreflectie WPL1 DVO (1).pdf
+</a>
 
 </body>
 </html>
